--- a/Singularity.v0.4.4
+++ b/Singularity.v0.4.4
@@ -4,7 +4,7 @@ IncludeCmd: yes
 
 %labels
   MAINTAINER cschu (cschu1981@gmail.com)
-  VERSION v.0.1
+  VERSION v.0.4.4
 
 
 %environment
@@ -48,27 +48,8 @@ export PATH=$PATH:/opt/software/miniconda3/bin:/opt/software/fetchMGs:/opt/softw
   ln -s /opt/software/mapseq/share /usr/bin/
 
   cd /opt/software && \
-  git clone https://github.com/motu-tool/fetchMGs.git # && \
-  # ln -s /opt/software/fetchMGS/fetchMGs.pl /usr/bin/fetchMG.pl
-  # # all the conda packages won't work together.. ><;
-  # wget -q https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh 
-  # bash Miniconda3-latest-Linux-x86_64.sh -b -p /opt/software/miniconda3
-  # rm -f Miniconda3-latest-Linux-x86_64.sh
-
-  # # install what you can via conda
-  # # /opt/software/miniconda3/bin/conda install -y -c conda-forge -c bioconda hmmer 'samtools>=1.13' bwa kraken2 'gatk4==4.1.6.0-0' fastqc multiqc bbmap seqtk
-  # /opt/software/miniconda3/bin/conda install -y -c conda-forge -c bioconda \
-	#   'hmmer=3.3.2=h1b792b2_1' \
-  #   'samtools=1.13=h8c37831_0' \
-  #   'bwa=0.7.17=h5bf99c6_8' \
-  #   'kraken2=2.1.2=pl5262h7d875b9_0' \
-  #   'gatk4=4.1.6.0=py38_0' \
-  #   'fastqc=0.11.9=hdfd78af_1' \
-  #   'multiqc=1.11=pyhdfd78af_0' \
-  #   'bbmap=38.91=he522d1c_1' \
-  #   'seqtk=1.3=h5bf99c6_3'
-
-  
-  
-
-  
+  git clone https://github.com/motu-tool/fetchMGs.git && \
+  ln -s /opt/software/fetchMGs/fetchMGs.pl /usr/bin/fetchMGs.pl && \
+	ln -s /opt/software/fetchMGs/bin/hmmsearch /usr/bin/hmmsearch && \
+	ln -s /opt/software/fetchMGs/bin/seqtk /usr/bin/seqtk && \
+	ln -s /opt/software/fetchMGs/lib /usr/bin/lib
