container: remove unnecessary links

--- a/Singularity.v0.4.4
+++ b/Singularity.v0.4.4
@@ -50,6 +50,6 @@ export PATH=$PATH:/opt/software/miniconda3/bin:/opt/software/fetchMGs:/opt/softw
   cd /opt/software && \
   git clone https://github.com/motu-tool/fetchMGs.git && \
   ln -s /opt/software/fetchMGs/fetchMGs.pl /usr/bin/fetchMGs.pl && \
-	ln -s /opt/software/fetchMGs/bin/hmmsearch /usr/bin/hmmsearch && \
-	ln -s /opt/software/fetchMGs/bin/seqtk /usr/bin/seqtk && \
+	# ln -s /opt/software/fetchMGs/bin/hmmsearch /usr/bin/hmmsearch && \
+	# ln -s /opt/software/fetchMGs/bin/seqtk /usr/bin/seqtk && \
 	ln -s /opt/software/fetchMGs/lib /usr/bin/lib
