--- a/Singularity.v0.4.4
+++ b/Singularity.v0.4.4
@@ -53,3 +53,5 @@ export PATH=$PATH:/opt/software/miniconda3/bin:/opt/software/fetchMGs:/opt/softw
 	# ln -s /opt/software/fetchMGs/bin/hmmsearch /usr/bin/hmmsearch && \
 	# ln -s /opt/software/fetchMGs/bin/seqtk /usr/bin/seqtk && \
 	ln -s /opt/software/fetchMGs/lib /usr/bin/lib
+
+#trigger
